--- a/Site/index.html
+++ b/Site/index.html
@@ -1,11 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <title>RizutaAnime</title>
+  <style>
+    body {
+      background-color: #181818;
+      color: #fff;
+      font-family: sans-serif;
+      margin: 0;
+      padding: 0;
+    }
+
+    header {
+      background-color: white;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0px 2px 4px grey;
+    }
+
+    h1 {
+      color: black;
+      font-size: 2em;
+      margin: 0;
+    }
+
+    nav {
+      display: flex;
+      gap: 20px;
+    }
+
+    nav a {
+    width: 90px;
+    height: 20px;
+    color: black;
+    background: #fff;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    box-shadow: 5px 2px 2px 0px grey;
+    }
+
+    main {
+      padding: 20px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    section {
+      margin-top: 30px;
+    }
+
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 10px;
+    }
+
+    .gallery img {
+      width: 100%;
+      height: auto;
+    }
+
+    footer {
+      background-color: #282828;
+      padding: 20px;
+      text-align: center;
+    }
+  </style>
 </head>
 <body>
+  <header>
+    <h1>RizutaAnime</h1>
+    <nav>
+      <a href="#">Sobre nós</a>
+      <a href="#">Objetivo</a>
+      <a href="#">Login</a>
+      <a href="#">Cadastrar</a>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Sua lista de Animes e Mangás</h2>
+      <button>Button</button>
+      <button>Button</button>
+    </section>
+
+     <section>
+      <h2>Sobre RizutaAnime:</h2>
+      <div class="gallery">
+        <a>mangá e do anime está relacionada a diversas formas de entretenimento que existiam no Japão antes do cinema, como o teatro de sombras, o emakimono, o kagee e o teatro de papel:</a>
+        <a>Oricom Shohatsu (Teatro das Sombras)
+No século XVII, artistas percorriam vilarejos contando lendas por meio de marionetes projetadas em um painel. Essas lendas foram escritas e ilustradas em rolos de papel, dando origem ao mangá. </a>
+      </div>
+    </section>
     
+        <section>
+      <h2>Objetivos:</h2>
+      <div class="gallery">
+        <img src="anime1.jpg" alt="Anime 1">
+        <img src="anime2.jpg" alt="Anime 2">
+        <img src="anime3.jpg" alt="Anime 3">
+        <img src="anime4.jpg" alt="Anime 4">
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2024 RizutaAnime. Todos os direitos reservados.</p>
+  </footer>
 </body>
 </html>
