--- a/Site/index.html
+++ b/Site/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>RizutaAnime</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_imagens_Rizuta/favicon-16x16.png">
+    <link rel="shortcut icon" type="imagex/png" sizes="16x16" href="/favicon_imagens_Rizuta/favicon-16x16.png">
   <style>
     body {
       background-color: #181818;
