ta uns 20% ainda

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>RizutaAnime</title>
   <link rel="stylesheet" href="./css/estilo.css">
   <link rel="shortcut icon" type="image-x/png" href="/public/assets/icon/favicon-16x16.png">
   <link rel="preconnect" href="https://fonts.gstatic.com">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
+
 <body>
   <header>
     <h1>RizutaAnime</h1>
     <nav>
-      <a href="#" class="l">Sobre nós</a>
-      <a href="#" class="l">Objetivo</a>
+      <a href="#rizuta" class="l">Sobre nós</a>
+      <a href="#obj" class="l">Objetivos</a>
       <a href="#" class="l">Login</a>
-      <a href="#" class="l">Cadastrar</a>
+      <li href="./cadastro.html" class="l">Cadastrar</li>
     </nav>
   </header>
 
@@ -26,58 +32,96 @@
       </div>
     </section>
 
-     <section>
-      <h2>Sobre RizutaAnime:</h2>
+    <section>
+      <h2 id="rizuta" class="texto-sombra">Sobre RizutaAnime:</h2>
       <div class="gallery">
-        <a>mangá e do anime está relacionada a diversas formas de entretenimento que existiam no Japão antes do cinema, como o teatro de sombras, o emakimono, o kagee e o teatro de papel:</a>
-        <a>Oricom Shohatsu (Teatro das Sombras)
-No século XVII, artistas percorriam vilarejos contando lendas por meio de marionetes projetadas em um painel. Essas lendas foram escritas e ilustradas em rolos de papel, dando origem ao mangá. </a>
+        <img src="./assets/imgs/anime.png">
+        <div class="boxes2">
+          <div class="box2">
+            <h3 class="texto-sombra-2">Animes:</h3>
+            <a class="te">A rica tradição do anime tem suas raízes em diversas formas de entretenimento japonesas pré-cinematográficas, 
+              como o emakimono (forma de arte narrativa japonesa que remonta ao período Nara), 
+              kagee (teatro de sombras) e teatro de papel. 
+              Com raízes nas antigas formas de narrativa japonesa, 
+              o mangá e anime evoluíram para um fenômeno cultural global. 
+              O Rizuta oferece uma interface intuitiva e algoritmos de recomendação personalizados para que você explore, 
+              organize e descubra o anime perfeito.
+              O Rizuta oferece uma plataforma completa para explorar o universo dos animes, 
+              permitindo pesquisas, 
+              descobertas de novas séries e a organização de uma biblioteca personalizada. 
+              <a href="#" class="anime_link">Comece sua jornada agora!</a></a>
+          </div>
+        </div>
+      </div>
+      <div class="gallery">
+        <img src="./assets/imgs/Manga.png">
+        <div class="boxes2">
+          <div class="box2">
+            <h3 class="texto-sombra-2">Mangás:</h3>
+            <a class="te">O termo "mangá" começa a ser utilizado para designar desenhos e caricaturas. 
+              Katsushika Hokusai, um dos artistas mais famosos do ukiyo-e, 
+              publicou uma série de livros chamada "Hokusai Manga", 
+              que continha diversos esboços e desenhos, 
+              incluindo algumas sequências narrativas. 
+              <span style="font-weight: 800;">Osamu Tezuka</span>: Considerado o "Deus dos mangás", 
+              Osamu Tezuka é responsável por popularizar o mangá no mundo todo. 
+              Com obras como "Astro Boy" e "Kimba, o Leão Branco", 
+              Tezuka estabeleceu muitos dos elementos que definem o mangá moderno, 
+              como a divisão em capítulos, a variedade de gêneros e a complexidade narrativa.
+              <a href="#" class="anime_link">Comece sua jornada agora!</a>
+            </div>
+        </div>
       </div>
     </section>
-        <section>
-          <h2>Sobre nós</h2>
-              <div class="social">
-                <div class="container">
-                  <div class="boxes">
-                    <div class="box">
-                      <h4>Missão</h4>
-                      <p>Conectar fãs de animes e mangás do mundo todo, 
-                        proporcionando uma plataforma abrangente e interativa para organizar, 
-                        descobrir e compartilhar suas paixões.</p>
-                    </div>
-                    <div class="box">
-                      <h4>Visão</h4>
-                      <p>Ser a principal referência global para amantes de animes e mangás, 
-                        promovendo uma comunidade inclusiva e engajada.</p>
-                    </div>
-                    <div class="box">
-                      <h4 style="margin-top: 2px">Valores</h4>
-                      <p>Somos tão fãs de anime e mangá tanto quanto você, 
-                        e é isso que guia tudo o que construímos aqui.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-    </section>
-
-    <section>
-      <h2>Objetivos Sustentaveis:</h2>
+    <section id="obj">
+      <div class="gallery">
       <div class="social">
         <div class="container">
           <div class="boxes">
             <div class="box">
-              <img src="assets/imgs/ods-3.png">
+              <img class="img2" src="assets/imgs/alvo.png">
+              <h3 class="texto-sombra-2">Missão</h3>
+              <p>Conectar fãs de animes e mangás do mundo todo,
+                proporcionando uma plataforma abrangente e interativa para organizar,
+                descobrir e compartilhar suas paixões.</p>
             </div>
             <div class="box">
-              <img src="assets/imgs/ods-4.webp">
+              <img class="img2" src="assets/imgs/visao.png">
+              <h3 class="texto-sombra-2">Visão</h3>
+              <p>Ser a principal referência global para amantes de animes e mangás,
+                promovendo uma comunidade inclusiva e engajada.</p>
             </div>
             <div class="box">
-              <img src="assets/imgs/ods-10.jpg">
+              <img class="img2" src="assets/imgs/valores.png">
+              <h3 class="texto-sombra-2">Valores</h3>
+              <p>Somos tão fãs de anime e mangá tanto quanto você,
+                e é isso que guia tudo o que construímos aqui.</p>
             </div>
           </div>
         </div>
       </div>
+      </div>
+    </section>
 
+    <section>
+      <h2 class="texto-sombra">Objetivos Sustentaveis:</h2>
+      <div class="gallery">
+      <div class="social">
+        <div class="container">
+          <div class="boxes">
+            <div class="box">
+              <p><img src="assets/imgs/ods-3.png"></p>
+            </div>
+            <div class="box">
+              <p><img src="assets/imgs/ods-4.webp"></p>
+            </div>
+            <div class="box">
+              <p><img src="assets/imgs/ods-10.jpg"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     </section>
   </main>
 
@@ -85,4 +129,5 @@ No século XVII, artistas percorriam vilarejos contando lendas por meio de mario
     <p>&copy; 2024 RizutaAnime. Todos os direitos reservados.</p>
   </footer>
 </body>
+
 </html>
