--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
     <nav>
       <a href="#rizuta" class="l">Sobre nós</a>
       <a href="#obj" class="l">Objetivos</a>
-      <a href="#" class="l">Login</a>
-      <li href="./cadastro.html" class="l">Cadastrar</li>
+      <a rel="stylesheet" href="#" class="l">Login</a>
+      <li rel="stylesheet" href="./cadastro.html" class="l">Cadastrar</li>
     </nav>
   </header>
 
@@ -107,7 +107,7 @@
       <h2 class="texto-sombra">Objetivos Sustentaveis:</h2>
       <div class="gallery">
       <div class="social">
-        <div class="container">
+        <div class="container1">
           <div class="boxes">
             <div class="box">
               <p><img src="assets/imgs/ods-3.png"></p>
@@ -126,8 +126,34 @@
   </main>
 
   <footer>
-    <p>&copy; 2024 RizutaAnime. Todos os direitos reservados.</p>
+    <div class="rodapeEsq">
+      <p class="titulo">Fale conosco</p>
+      <p class="contato">Deixe seu contato.</p>
+      <div id="form">
+        <span>
+          <input class="input_nome" type="text" placeholder="Nome">
+          <input class="input_email" type="text" placeholder="E-mail">
+        </span>
+        <textarea class="input_comentario" placeholder="Deixe sua mensagem"></textarea>
+        <button id="contato">Enviar</button>
+      </div>
+    </div>
+    <div class="rodapeDir">
+      <div class="endereco">
+        <span class="titulo">São Paulo - SP</span>
+      </div>
+      <div class="contato">
+        <span class="titulo">Contatos</span>
+        <p>
+          tiago.bezerril@sptech.school<br>
+          <a href="https://github.com/tiagobezerril/RizutaAnime" target="_blank" rel="noopener noreferrer">Github.com</a><br>
+          +55 (11) 91499-1015
+        </p>
+      </div>
+      <div class="direitos">
+        <span class="titulo">© 2024 RizutaAnime. Todos os direitos reservados.</span>
+      </div>
+    </div>
   </footer>
 </body>
-
 </html>
