--- a/public/login.html
+++ b/public/login.html
@@ -14,8 +14,8 @@
     <header>
         <h1 rel="stylesheet" href="./index.html" class="logo">RizutaAnime</h1>
         <nav>
-            <a rel="stylesheet" href="./index.html" class="l">Inicio</a>
-            <li rel="stylesheet" href="./login.html" class="l">Login</li>
+            <a href="./index.html" class="l">Inicio</a>
+            <li href="#" class="l">Login</li>
         </nav>
     </header>
 
@@ -29,20 +29,20 @@
                 <div id="ema"></div>
                 <input oninput="validarSenha()" type="password" id="ipt_senha" placeholder="Senha">
                 <div id="senhas"></div>
-                <input oninput="validarConfirmacao()" type="password" id="ipt_confirm" placeholder="Confirme a senha">
-                <div id="conSenha"></div>
 
-                <button onclick="validarCadastro()">Cadastrar-se</button>
+                <button onclick="validarCadastro()">Entrar</button>
                 <div id="validado"></div>
-                <a>*Faça o cadastro em nossa plataforma para ter acesso total a nosso conteúdo. <br>
-                </a><a class="shadow"href="login.html">Já é cadastrado? Faça seu login aqui!</a>
+                <a>*Faça o entre em nossa plataforma para ter acesso total a nosso conteúdo. <br>
+                </a><a rel="stylesheet" class="shadow"href="./cadastro.html">Não é cadastrado? Faça seu cadastro aqui!</a>
             </span>
         </div>
 
     </div>
 
 
-
+    <footer>
+        <p>&copy; 2024 RizutaAnime. Todos os direitos reservados.</p>
+    </footer>
 </body>
 
 </html>
