--- a/web-data-viz/public/cadastro.html
+++ b/web-data-viz/public/cadastro.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1 class="logo"><a href="./index.html">RizutaAnime</a></h1>
+        <h1><a href="./index.html" class="logo">RizutaAnime</a></h1>
       </header>  
       
     <div class="login">
