--- a/web-data-viz/public/login.html
+++ b/web-data-viz/public/login.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1 class="logo1"><a href="./index.html">RizutaAnime</a></h1>
+        <h1><a href="./index.html" class="logo">RizutaAnime</a></h1>
       </header>  
 
     <div class="login">
@@ -128,25 +128,11 @@
                     sessionStorage.EMAIL_USUARIO = json.email;
                     sessionStorage.NOME_USUARIO = json.nome;
                     sessionStorage.ID_USUARIO = json.idFuncionario;
-                    sessionStorage.TIPOFUNC = json.tipo;
-                    sessionStorage.RESTAURANTES = JSON.stringify(json.restaurantes[0]);
-                    sessionStorage.FILIAIS = JSON.stringify(json.filiais);
-                    sessionStorage.SENSORES = JSON.stringify(json.sensores);
-                    sessionStorage.FUNCIONARIOS = JSON.stringify(json.funcionarios);
 
-                    if (sessionStorage.TIPOFUNC == 'Supervisor'){
-                        setTimeout(function () {
-                            window.location = "login/index.html";
-                        }, 1000); // apenas para exibir o loading
-                    } else if (sessionStorage.TIPOFUNC == 'Suporte'){
-                        setTimeout(function () {
-                            window.location = "login/telaSuporte/public/index.html";
-                        }, 1000);
-                    } else {
-                        setTimeout(function () {
-                            window.location = "login/telasFuncionario/index.html";
-                        }, 1000);
-                    }
+                    setTimeout(function () {
+                    window.location = "./home.html";
+                    }, 1000);
+                    
                 });
 
             } else {
